force-app/main/default/objects/Order/fields/Acknowledgement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Uploaded</label>
    <type>Checkbox</type>
</CustomField>