force-app/main/default/objects/Order/fields/Assembly_Packaging_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Packaging_Notes__c</fullName>
    <description>Created by BDD</description>
    <label>Assembly &amp; Packaging Notes</label>
    <type>TextArea</type>
</CustomField>