force-app/main/default/objects/Order/fields/Assembly_Packaging_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Packaging_Order_Status__c</fullName>
    <description>Created by BDD</description>
    <label>Assembly &amp; Packaging Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Packaging</fullName>
            </value>
            <value>
                <fullName>Awaiting Collection</fullName>
            </value>
            <value>
                <fullName>Awaiting Assembly</fullName>
            </value>
            <value>
                <fullName>Ready for Transport</fullName>
            </value>
            <value>
                <fullName>Order on Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>