force-app/main/default/objects/Order/fields/Carrier_Consignment_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Consignment_Note_Number__c</fullName>
    <label>Carrier &amp; Consignment Note Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>