force-app/main/default/objects/Order/fields/Carrier_To_Customer_10__c.field-meta.xml
<CustomField>
    <fullName>Carrier_To_Customer_10__c</fullName>
    <label>Carrier To Customer 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceit</fullName>
            </value>
            <value>
                <fullName>Australis</fullName>
            </value>
            <value>
                <fullName>APD</fullName>
            </value>
            <value>
                <fullName>Adelaide Crane Trucks</fullName>
            </value>
            <value>
                <fullName>Customer Collection</fullName>
            </value>
            <value>
                <fullName>Sprint Freight</fullName>
            </value>
            <value>
                <fullName>Terrain Group</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>Startrack</fullName>
            </value>
            <value>
                <fullName>Northline</fullName>
            </value>
            <value>
                <fullName>Felix</fullName>
            </value>
            <value>
                <fullName>Toll</fullName>
            </value>
            <value>
                <fullName>Mohamed</fullName>
            </value>
            <value>
                <fullName>City Crane Trucks</fullName>
            </value>
            <value>
                <fullName>Bays Removals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ace It Couriers</fullName>
                <isActive>false</isActive>
                <label>Ace It Couriers</label>
            </value>
            <value>
                <fullName>Ausstar</fullName>
                <isActive>false</isActive>
                <label>Ausstar</label>
            </value>
            <value>
                <fullName>Camerons</fullName>
                <isActive>false</isActive>
                <label>Camerons</label>
            </value>
            <value>
                <fullName>Colin - Coast to Country</fullName>
                <isActive>false</isActive>
                <label>Colin - Coast to Country</label>
            </value>
            <value>
                <fullName>Irvines</fullName>
                <isActive>false</isActive>
                <label>Irvines</label>
            </value>
            <value>
                <fullName>Jet</fullName>
                <isActive>false</isActive>
                <label>Jet</label>
            </value>
            <value>
                <fullName>McEvoys</fullName>
                <isActive>false</isActive>
                <label>McEvoys</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Pickering Transport</fullName>
                <isActive>false</isActive>
                <label>Pickering Transport</label>
            </value>
            <value>
                <fullName>SA Taxi Trucks</fullName>
                <isActive>false</isActive>
                <label>SA Taxi Trucks</label>
            </value>
            <value>
                <fullName>Southern Trading</fullName>
                <isActive>false</isActive>
                <label>Southern Trading</label>
            </value>
            <value>
                <fullName>Trouble Free</fullName>
                <isActive>false</isActive>
                <label>Trouble Free</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>