force-app/main/default/objects/Order/fields/Carrier_To_Customer_10_Other__c.field-meta.xml
<CustomField>
    <fullName>Carrier_To_Customer_10_Other__c</fullName>
    <label>Carrier To Customer 10 Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>