force-app/main/default/objects/Order/fields/Carrier_To_Customer_3__c.field-meta.xml
<CustomField>
    <fullName>Carrier_To_Customer_3__c</fullName>
    <description>Created by BDD</description>
    <label>Carrier To Customer 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carrier</valueSetName>
    </valueSet>
</CustomField>