force-app/main/default/objects/Order/fields/Carrier_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Carrier_To_Customer__c</fullName>
    <label>Carrier To Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carrier</valueSetName>
    </valueSet>
</CustomField>