force-app/main/default/objects/Order/fields/Carrier_To_Customer_Other__c.field-meta.xml
<CustomField>
    <fullName>Carrier_To_Customer_Other__c</fullName>
    <description>Created by BDD</description>
    <label>Carrier To Customer Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>