force-app/main/default/objects/Order/fields/Claim_10_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_10_Amount__c</fullName>
    <label>Claim 10 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>