force-app/main/default/objects/Order/fields/Claim_10_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_10_Date__c</fullName>
    <label>Claim 10 Date</label>
    <type>Date</type>
</CustomField>