force-app/main/default/objects/Order/fields/Claim_10_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_10_Invoice_Number__c</fullName>
    <label>Claim 10 Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>