force-app/main/default/objects/Order/fields/Claim_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_1_Date__c</fullName>
    <label>Claim 1 Date</label>
    <type>Date</type>
</CustomField>