force-app/main/default/objects/Order/fields/Claim_1_Invoice_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Claim_1_Invoice_Date_Paid__c</fullName>
    <label>Claim 1 Invoice Date Paid</label>
    <type>Date</type>
</CustomField>