force-app/main/default/objects/Order/fields/Claim_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_2_Date__c</fullName>
    <label>Claim 2 Date</label>
    <type>Date</type>
</CustomField>