force-app/main/default/objects/Order/fields/Claim_2_Invoice_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Claim_2_Invoice_Date_Paid__c</fullName>
    <label>Claim 2 Invoice Date Paid</label>
    <type>Date</type>
</CustomField>