force-app/main/default/objects/Order/fields/Claim_2_Invoice_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Claim_2_Invoice_Date_Sent__c</fullName>
    <label>Claim 2 Invoice Date Sent</label>
    <type>Date</type>
</CustomField>