force-app/main/default/objects/Order/fields/Claim_2_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_2_Invoice_Number__c</fullName>
    <label>Claim 2 Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>