force-app/main/default/objects/Order/fields/Claim_3_Updated_System__c.field-meta.xml
<CustomField>
    <fullName>Claim_3_Updated_System__c</fullName>
    <label>Claim 3 Updated System</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>