force-app/main/default/objects/Order/fields/Claim_4_Updated_System__c.field-meta.xml
<CustomField>
    <fullName>Claim_4_Updated_System__c</fullName>
    <description>Created by BDD</description>
    <label>Claim 4 Updated System</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>