force-app/main/default/objects/Order/fields/Connote_Number_10__c.field-meta.xml
<CustomField>
    <fullName>Connote_Number_10__c</fullName>
    <label>Connote Number 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>