force-app/main/default/objects/Order/fields/Connote_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Connote_Number_2__c</fullName>
    <label>Connote Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>