force-app/main/default/objects/Order/fields/Connote_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Connote_Number_3__c</fullName>
    <description>Created by BDD</description>
    <label>Connote Number 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>