force-app/main/default/objects/Order/fields/Connote_Number__c.field-meta.xml
<CustomField>
    <fullName>Connote_Number__c</fullName>
    <label>Connote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>