force-app/main/default/objects/Order/fields/Customer_Delivery_Date_Received_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delivery_Date_Received_3__c</fullName>
    <description>Created by BDD</description>
    <label>Customer Delivery Date Received 3</label>
    <type>Date</type>
</CustomField>