force-app/main/default/objects/Order/fields/Customer_Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Notes__c</fullName>
    <description>Created by BDD</description>
    <label>Customer Feedback Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>