force-app/main/default/objects/Order/fields/Customer_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order_Number__c</fullName>
    <description>Created by BDD</description>
    <formula>Parent_Quote__r.Order_Number__c</formula>
    <inlineHelpText>Entered against the Quote</inlineHelpText>
    <label>Customer Purchase Order Number</label>
    <type>Text</type>
</CustomField>