force-app/main/default/objects/Order/fields/Date_Of_Arrival_From_Supplier_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Arrival_From_Supplier_3__c</fullName>
    <description>Created by BDD</description>
    <label>Date Of Arrival From Supplier 3</label>
    <type>Date</type>
</CustomField>