force-app/main/default/objects/Order/fields/Date_Of_Arrival_From_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Arrival_From_Supplier__c</fullName>
    <label>Date Of Arrival From Supplier</label>
    <type>Date</type>
</CustomField>