force-app/main/default/objects/Order/fields/Day_7_of_Drawings_Requested_10__c.field-meta.xml
<CustomField>
    <fullName>Day_7_of_Drawings_Requested_10__c</fullName>
    <formula>AND( TODAY() = ( Drawings_Requested_10__c + 7),
ISPICKVAL( Drawings_if_required_10__c , &apos;Yes&apos;),
Drawings_Uploaded_10__c = false
)</formula>
    <label>Day 7 of Drawings Requested 10</label>
    <type>Checkbox</type>
</CustomField>