force-app/main/default/objects/Order/fields/Day_7_of_Drawings_Requested_2__c.field-meta.xml
<CustomField>
    <fullName>Day_7_of_Drawings_Requested_2__c</fullName>
    <formula>AND( TODAY() = ( Drawings_Requested_2__c + 7),
 ISPICKVAL( Drawings_if_required_2__c , &apos;Yes&apos;),
 Drawings_Uploaded_2__c = false
)</formula>
    <label>Day 7 of Drawings Requested 2</label>
    <type>Checkbox</type>
</CustomField>