force-app/main/default/objects/Order/fields/Day_7_of_Drawings_Requested_3__c.field-meta.xml
<CustomField>
    <fullName>Day_7_of_Drawings_Requested_3__c</fullName>
    <formula>AND( TODAY() = ( Drawings_Requested_3__c + 7),
ISPICKVAL( Drawings_if_required_3__c , &apos;Yes&apos;),
Drawings_Uploaded_3__c = false
)</formula>
    <label>Day 7 of Drawings Requested 3</label>
    <type>Checkbox</type>
</CustomField>