force-app/main/default/objects/Order/fields/Day_7_of_Drawings_Requested__c.field-meta.xml
<CustomField>
    <fullName>Day_7_of_Drawings_Requested__c</fullName>
    <formula>AND( TODAY() = ( Drawings_Requested__c + 7),
 ISPICKVAL(Drawings_if_required__c , &apos;Yes&apos;),
 Drawings_Uploaded__c = false 
)</formula>
    <label>Day 7 of Drawings Requested</label>
    <type>Checkbox</type>
</CustomField>