force-app/main/default/objects/Order/fields/Delivery_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_10__c</fullName>
    <label>Delivery Date 10</label>
    <type>Date</type>
</CustomField>