force-app/main/default/objects/Order/fields/Delivery_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_3__c</fullName>
    <description>Created by BDD</description>
    <label>Delivery Date 3</label>
    <type>Date</type>
</CustomField>