force-app/main/default/objects/Order/fields/Description_10__c.field-meta.xml
<CustomField>
    <fullName>Description_10__c</fullName>
    <label>Description 10</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>