force-app/main/default/objects/Order/fields/Dispatch_Photos_Uploaded_10__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Photos_Uploaded_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatch Photos Uploaded 10</label>
    <type>Checkbox</type>
</CustomField>