force-app/main/default/objects/Order/fields/Dispatch_Photos_Uploaded_2__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Photos_Uploaded_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>Dispatch Photos Uploaded 2</label>
    <type>Checkbox</type>
</CustomField>