force-app/main/default/objects/Order/fields/Drawings_if_required__c.field-meta.xml
<CustomField>
    <fullName>Drawings_if_required__c</fullName>
    <description>Created by BDD</description>
    <label>Drawings (if required)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>