force-app/main/default/objects/Order/fields/Drawings_Requested_10__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Requested_10__c</fullName>
    <label>Drawings Requested 10</label>
    <type>Date</type>
</CustomField>