force-app/main/default/objects/Order/fields/Drawings_Requested_2__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Requested_2__c</fullName>
    <label>Drawings Requested 2</label>
    <type>Date</type>
</CustomField>