force-app/main/default/objects/Order/fields/Drawings_Requested_3__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Requested_3__c</fullName>
    <label>Drawings Requested 3</label>
    <type>Date</type>
</CustomField>