force-app/main/default/objects/Order/fields/Drawings_Requested__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Requested__c</fullName>
    <label>Drawings Requested</label>
    <type>Date</type>
</CustomField>