force-app/main/default/objects/Order/fields/Drawings_Supply_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Supply_Date_10__c</fullName>
    <label>Drawings Supply Date 10</label>
    <type>Date</type>
</CustomField>