force-app/main/default/objects/Order/fields/Drawings_Supply_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Supply_Date_2__c</fullName>
    <label>Drawings Supply Date 2</label>
    <type>Date</type>
</CustomField>