force-app/main/default/objects/Order/fields/Drawings_Supply_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Supply_Date_3__c</fullName>
    <label>Drawings Supply Date 3</label>
    <type>Date</type>
</CustomField>