force-app/main/default/objects/Order/fields/Drawings_Supply_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Supply_Date__c</fullName>
    <label>Drawings Supply Date</label>
    <type>Date</type>
</CustomField>