force-app/main/default/objects/Order/fields/Drawings_Uploaded_10__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Uploaded_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawings Uploaded 10</label>
    <type>Checkbox</type>
</CustomField>