force-app/main/default/objects/Order/fields/Drawings_Uploaded_2__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Uploaded_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawings Uploaded 2</label>
    <type>Checkbox</type>
</CustomField>