force-app/main/default/objects/Order/fields/Drawings_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawings Uploaded</label>
    <type>Checkbox</type>
</CustomField>