force-app/main/default/objects/Order/fields/Established_Customer__c.field-meta.xml
<CustomField>
    <fullName>Established_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Established Customer</label>
    <type>Checkbox</type>
</CustomField>