force-app/main/default/objects/Order/fields/Estimated_Date_Of_Completion_2__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_Of_Completion_2__c</fullName>
    <label>Estimated Date Of Completion 2</label>
    <type>Date</type>
</CustomField>