force-app/main/default/objects/Order/fields/Estimated_Date_Of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_Of_Completion__c</fullName>
    <label>Estimated Date Of Completion</label>
    <type>Date</type>
</CustomField>