force-app/main/default/objects/Order/fields/Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Status__c</fullName>
    <label>Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Feedback</fullName>
            </value>
            <value>
                <fullName>Feedback Received</fullName>
            </value>
            <value>
                <fullName>Feedback Not Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>