force-app/main/default/objects/Order/fields/Final_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Date__c</fullName>
    <label>Final Delivery Date</label>
    <type>Date</type>
</CustomField>