force-app/main/default/objects/Order/fields/Final_Delivery_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Date_c__c</fullName>
    <formula>AND(
   NOT(ISBLANK(Final_Delivery_Date__c)),
   TODAY() - 7 = Final_Delivery_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Sent Final Delivery One Week After</label>
    <type>Checkbox</type>
</CustomField>