force-app/main/default/objects/Order/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Created by BDD</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>