force-app/main/default/objects/Order/fields/Freight_Company_10__c.field-meta.xml
<CustomField>
    <fullName>Freight_Company_10__c</fullName>
    <label>Freight Company 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toll</fullName>
            </value>
            <value>
                <fullName>Australia Post</fullName>
            </value>
            <value>
                <fullName>Fed Ex</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>Lysaght</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Astros	Astros</fullName>
                <isActive>false</isActive>
                <label>Astros	Astros</label>
            </value>
            <value>
                <fullName>Camerons</fullName>
                <isActive>false</isActive>
                <label>Camerons</label>
            </value>
            <value>
                <fullName>DHL</fullName>
                <isActive>false</isActive>
                <label>DHL</label>
            </value>
            <value>
                <fullName>Jet</fullName>
                <isActive>false</isActive>
                <label>Jet</label>
            </value>
            <value>
                <fullName>K + N</fullName>
                <isActive>false</isActive>
                <label>K + N</label>
            </value>
            <value>
                <fullName>Mainfreight</fullName>
                <isActive>false</isActive>
                <label>Mainfreight</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Northline</fullName>
                <isActive>false</isActive>
                <label>Northline</label>
            </value>
            <value>
                <fullName>Plasteel</fullName>
                <isActive>false</isActive>
                <label>Plasteel</label>
            </value>
            <value>
                <fullName>Rangeview Transport</fullName>
                <isActive>false</isActive>
                <label>Rangeview Transport</label>
            </value>
            <value>
                <fullName>Shaws Transport</fullName>
                <isActive>false</isActive>
                <label>Shaws Transport</label>
            </value>
            <value>
                <fullName>Southern Trading</fullName>
                <isActive>false</isActive>
                <label>Southern Trading</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>