force-app/main/default/objects/Order/fields/Freight_Company_3__c.field-meta.xml
<CustomField>
    <fullName>Freight_Company_3__c</fullName>
    <description>Created by BDD</description>
    <label>Freight Company 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Freight_Company</valueSetName>
    </valueSet>
</CustomField>