force-app/main/default/objects/Order/fields/Freight_Company_Other_10__c.field-meta.xml
<CustomField>
    <fullName>Freight_Company_Other_10__c</fullName>
    <label>Freight Company Other 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>