force-app/main/default/objects/Order/fields/Freight_Company_Other__c.field-meta.xml
<CustomField>
    <fullName>Freight_Company_Other__c</fullName>
    <description>Created by BDD</description>
    <label>Freight Company Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>