force-app/main/default/objects/Order/fields/Install_Completed_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Install_Completed_Date_2__c</fullName>
    <label>Install Completed Date 2</label>
    <type>Date</type>
</CustomField>