force-app/main/default/objects/Order/fields/Install_Completed_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Install_Completed_Date_3__c</fullName>
    <label>Install Completed Date 3</label>
    <type>Date</type>
</CustomField>