force-app/main/default/objects/Order/fields/Install_Completed_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Install_Completed_Date_4__c</fullName>
    <label>Install Completed Date 4</label>
    <type>Date</type>
</CustomField>