force-app/main/default/objects/Order/fields/Install_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Completed_Date__c</fullName>
    <label>Install Completed Date</label>
    <type>Date</type>
</CustomField>