force-app/main/default/objects/Order/fields/Install_Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Install_Notes_2__c</fullName>
    <label>Install Notes 2</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>