force-app/main/default/objects/Order/fields/Install_Notes_3__c.field-meta.xml
<CustomField>
    <fullName>Install_Notes_3__c</fullName>
    <label>Install Notes 3</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>